k8s/all.yaml
# =========================
# NAMESPACE
# =========================
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
---
# =========================
# SERVICES (ClusterIP)
# =========================
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: togglemaster
spec:
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: togglemaster
spec:
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: togglemaster
spec:
  selector:
    app: targeting-service
  ports:
    - port: 8003
      targetPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: togglemaster
spec:
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: togglemaster
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8005
      targetPort: 8005
---
# =========================
# AUTH SERVICE
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 106978078844.dkr.ecr.sa-east-1.amazonaws.com/auth-service:latest
          ports:
            - containerPort: 8001
---
# =========================
# FLAG SERVICE
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: 106978078844.dkr.ecr.sa-east-1.amazonaws.com/flag-service:latest
          ports:
            - containerPort: 8002
---
# =========================
# TARGETING SERVICE
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 106978078844.dkr.ecr.sa-east-1.amazonaws.com/targeting-service:latest
          ports:
            - containerPort: 8003
---
# =========================
# EVALUATION SERVICE (IRSA SQS)
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      serviceAccountName: evaluation-sa
      containers:
        - name: evaluation-service
          image: 106978078844.dkr.ecr.sa-east-1.amazonaws.com/evaluation-service:latest
          ports:
            - containerPort: 8004
---
# =========================
# ANALYTICS SERVICE (IRSA DYNAMODB + SQS)
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: togglemaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      serviceAccountName: analytics-sa
      containers:
        - name: analytics-service
          image: 106978078844.dkr.ecr.sa-east-1.amazonaws.com/analytics-service:latest
          ports:
            - containerPort: 8005
---
# =========================
# INGRESS (NGINX)
# =========================
# =========================
# INGRESS — AUTH
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
---
# =========================
# INGRESS — FLAG (SEM REWRITE)
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
---
# =========================
# INGRESS — TARGETING
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rules-ingress
  namespace: togglemaster
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rules
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003

---
# =========================
# INGRESS — EVALUATION
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004

---
# =========================
# INGRESS — ANALYTICS
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  namespace: togglemaster
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
